antlr/LuaParser.js
// Generated from ./antlr/Lua.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var LuaVisitor = require('./LuaVisitor').LuaVisitor;

var grammarFileName = "Lua.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "';'", "'local'", "'='", "'function'", "'break'", 
                     "'while'", "'do'", "'end'", "'if'", "'then'", "'elseif'", 
                     "'else'", "'for'", "','", "'return'", "'nil'", "'false'", 
                     "'true'", "'('", "')'", "'or'", "'and'", "'<'", "'>'", 
                     "'<='", "'>='", "'~='", "'=='", "'..'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'not'", "'#'", "'^'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, "NAME", "NORMALSTRING", "FLOAT", "COMMENT", 
                      "LINE_COMMENT", "WS", "SHEBANG" ];

var ruleNames =  [ "chunk", "block", "stat", "retstat", "funcname", "namelist", 
                   "explist", "exp", "functioncall", "varexp", "variable", 
                   "args", "funcbody", "parlist", "operatorOr", "operatorAnd", 
                   "operatorComparison", "operatorStrcat", "operatorAddSub", 
                   "operatorMulDivMod", "operatorUnary", "operatorPower", 
                   "number", "string" ];

function LuaParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

LuaParser.prototype = Object.create(antlr4.Parser.prototype);
LuaParser.prototype.constructor = LuaParser;

Object.defineProperty(LuaParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

LuaParser.EOF = antlr4.Token.EOF;
LuaParser.T__0 = 1;
LuaParser.T__1 = 2;
LuaParser.T__2 = 3;
LuaParser.T__3 = 4;
LuaParser.T__4 = 5;
LuaParser.T__5 = 6;
LuaParser.T__6 = 7;
LuaParser.T__7 = 8;
LuaParser.T__8 = 9;
LuaParser.T__9 = 10;
LuaParser.T__10 = 11;
LuaParser.T__11 = 12;
LuaParser.T__12 = 13;
LuaParser.T__13 = 14;
LuaParser.T__14 = 15;
LuaParser.T__15 = 16;
LuaParser.T__16 = 17;
LuaParser.T__17 = 18;
LuaParser.T__18 = 19;
LuaParser.T__19 = 20;
LuaParser.T__20 = 21;
LuaParser.T__21 = 22;
LuaParser.T__22 = 23;
LuaParser.T__23 = 24;
LuaParser.T__24 = 25;
LuaParser.T__25 = 26;
LuaParser.T__26 = 27;
LuaParser.T__27 = 28;
LuaParser.T__28 = 29;
LuaParser.T__29 = 30;
LuaParser.T__30 = 31;
LuaParser.T__31 = 32;
LuaParser.T__32 = 33;
LuaParser.T__33 = 34;
LuaParser.T__34 = 35;
LuaParser.T__35 = 36;
LuaParser.T__36 = 37;
LuaParser.NAME = 38;
LuaParser.NORMALSTRING = 39;
LuaParser.FLOAT = 40;
LuaParser.COMMENT = 41;
LuaParser.LINE_COMMENT = 42;
LuaParser.WS = 43;
LuaParser.SHEBANG = 44;

LuaParser.RULE_chunk = 0;
LuaParser.RULE_block = 1;
LuaParser.RULE_stat = 2;
LuaParser.RULE_retstat = 3;
LuaParser.RULE_funcname = 4;
LuaParser.RULE_namelist = 5;
LuaParser.RULE_explist = 6;
LuaParser.RULE_exp = 7;
LuaParser.RULE_functioncall = 8;
LuaParser.RULE_varexp = 9;
LuaParser.RULE_variable = 10;
LuaParser.RULE_args = 11;
LuaParser.RULE_funcbody = 12;
LuaParser.RULE_parlist = 13;
LuaParser.RULE_operatorOr = 14;
LuaParser.RULE_operatorAnd = 15;
LuaParser.RULE_operatorComparison = 16;
LuaParser.RULE_operatorStrcat = 17;
LuaParser.RULE_operatorAddSub = 18;
LuaParser.RULE_operatorMulDivMod = 19;
LuaParser.RULE_operatorUnary = 20;
LuaParser.RULE_operatorPower = 21;
LuaParser.RULE_number = 22;
LuaParser.RULE_string = 23;


function ChunkContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LuaParser.RULE_chunk;
    return this;
}

ChunkContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ChunkContext.prototype.constructor = ChunkContext;

ChunkContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

ChunkContext.prototype.EOF = function() {
    return this.getToken(LuaParser.EOF, 0);
};

ChunkContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitChunk(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LuaParser.ChunkContext = ChunkContext;

LuaParser.prototype.chunk = function() {

    var localctx = new ChunkContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, LuaParser.RULE_chunk);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 48;
        this.block();
        this.state = 49;
        this.match(LuaParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LuaParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.stat = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatContext);
    } else {
        return this.getTypedRuleContext(StatContext,i);
    }
};

BlockContext.prototype.retstat = function() {
    return this.getTypedRuleContext(RetstatContext,0);
};

BlockContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitBlock(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LuaParser.BlockContext = BlockContext;

LuaParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, LuaParser.RULE_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 54;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << LuaParser.T__0) | (1 << LuaParser.T__1) | (1 << LuaParser.T__3) | (1 << LuaParser.T__4) | (1 << LuaParser.T__5) | (1 << LuaParser.T__8) | (1 << LuaParser.T__12))) !== 0) || _la===LuaParser.NAME) {
            this.state = 51;
            this.stat();
            this.state = 56;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 58;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===LuaParser.T__14) {
            this.state = 57;
            this.retstat();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LuaParser.RULE_stat;
    return this;
}

StatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatContext.prototype.constructor = StatContext;


 
StatContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function StatVarDeclarationContext(parser, ctx) {
	StatContext.call(this, parser);
    StatContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatVarDeclarationContext.prototype = Object.create(StatContext.prototype);
StatVarDeclarationContext.prototype.constructor = StatVarDeclarationContext;

LuaParser.StatVarDeclarationContext = StatVarDeclarationContext;

StatVarDeclarationContext.prototype.variable = function() {
    return this.getTypedRuleContext(VariableContext,0);
};

StatVarDeclarationContext.prototype.exp = function() {
    return this.getTypedRuleContext(ExpContext,0);
};
StatVarDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitStatVarDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatFunctionContext(parser, ctx) {
	StatContext.call(this, parser);
    StatContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatFunctionContext.prototype = Object.create(StatContext.prototype);
StatFunctionContext.prototype.constructor = StatFunctionContext;

LuaParser.StatFunctionContext = StatFunctionContext;

StatFunctionContext.prototype.funcname = function() {
    return this.getTypedRuleContext(FuncnameContext,0);
};

StatFunctionContext.prototype.funcbody = function() {
    return this.getTypedRuleContext(FuncbodyContext,0);
};
StatFunctionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitStatFunction(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatWhileContext(parser, ctx) {
	StatContext.call(this, parser);
    StatContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatWhileContext.prototype = Object.create(StatContext.prototype);
StatWhileContext.prototype.constructor = StatWhileContext;

LuaParser.StatWhileContext = StatWhileContext;

StatWhileContext.prototype.exp = function() {
    return this.getTypedRuleContext(ExpContext,0);
};

StatWhileContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};
StatWhileContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitStatWhile(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatSemicolonContext(parser, ctx) {
	StatContext.call(this, parser);
    StatContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatSemicolonContext.prototype = Object.create(StatContext.prototype);
StatSemicolonContext.prototype.constructor = StatSemicolonContext;

LuaParser.StatSemicolonContext = StatSemicolonContext;

StatSemicolonContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitStatSemicolon(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatBreakContext(parser, ctx) {
	StatContext.call(this, parser);
    StatContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatBreakContext.prototype = Object.create(StatContext.prototype);
StatBreakContext.prototype.constructor = StatBreakContext;

LuaParser.StatBreakContext = StatBreakContext;

StatBreakContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitStatBreak(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatFunctioncallContext(parser, ctx) {
	StatContext.call(this, parser);
    StatContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatFunctioncallContext.prototype = Object.create(StatContext.prototype);
StatFunctioncallContext.prototype.constructor = StatFunctioncallContext;

LuaParser.StatFunctioncallContext = StatFunctioncallContext;

StatFunctioncallContext.prototype.functioncall = function() {
    return this.getTypedRuleContext(FunctioncallContext,0);
};
StatFunctioncallContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitStatFunctioncall(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatIfContext(parser, ctx) {
	StatContext.call(this, parser);
    StatContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatIfContext.prototype = Object.create(StatContext.prototype);
StatIfContext.prototype.constructor = StatIfContext;

LuaParser.StatIfContext = StatIfContext;

StatIfContext.prototype.exp = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpContext);
    } else {
        return this.getTypedRuleContext(ExpContext,i);
    }
};

StatIfContext.prototype.block = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BlockContext);
    } else {
        return this.getTypedRuleContext(BlockContext,i);
    }
};
StatIfContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitStatIf(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatForContext(parser, ctx) {
	StatContext.call(this, parser);
    StatContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatForContext.prototype = Object.create(StatContext.prototype);
StatForContext.prototype.constructor = StatForContext;

LuaParser.StatForContext = StatForContext;

StatForContext.prototype.NAME = function() {
    return this.getToken(LuaParser.NAME, 0);
};

StatForContext.prototype.exp = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpContext);
    } else {
        return this.getTypedRuleContext(ExpContext,i);
    }
};

StatForContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};
StatForContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitStatFor(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatAssignmentContext(parser, ctx) {
	StatContext.call(this, parser);
    StatContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatAssignmentContext.prototype = Object.create(StatContext.prototype);
StatAssignmentContext.prototype.constructor = StatAssignmentContext;

LuaParser.StatAssignmentContext = StatAssignmentContext;

StatAssignmentContext.prototype.variable = function() {
    return this.getTypedRuleContext(VariableContext,0);
};

StatAssignmentContext.prototype.exp = function() {
    return this.getTypedRuleContext(ExpContext,0);
};
StatAssignmentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitStatAssignment(this);
    } else {
        return visitor.visitChildren(this);
    }
};



LuaParser.StatContext = StatContext;

LuaParser.prototype.stat = function() {

    var localctx = new StatContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, LuaParser.RULE_stat);
    var _la = 0; // Token type
    try {
        this.state = 117;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
        switch(la_) {
        case 1:
            localctx = new StatSemicolonContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 60;
            this.match(LuaParser.T__0);
            break;

        case 2:
            localctx = new StatVarDeclarationContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 61;
            this.match(LuaParser.T__1);
            this.state = 62;
            this.variable();
            this.state = 65;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===LuaParser.T__2) {
                this.state = 63;
                this.match(LuaParser.T__2);
                this.state = 64;
                this.exp(0);
            }

            break;

        case 3:
            localctx = new StatAssignmentContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 67;
            this.variable();
            this.state = 68;
            this.match(LuaParser.T__2);
            this.state = 69;
            this.exp(0);
            break;

        case 4:
            localctx = new StatFunctionContext(this, localctx);
            this.enterOuterAlt(localctx, 4);
            this.state = 71;
            this.match(LuaParser.T__3);
            this.state = 72;
            this.funcname();
            this.state = 73;
            this.funcbody();
            break;

        case 5:
            localctx = new StatFunctioncallContext(this, localctx);
            this.enterOuterAlt(localctx, 5);
            this.state = 75;
            this.functioncall();
            break;

        case 6:
            localctx = new StatBreakContext(this, localctx);
            this.enterOuterAlt(localctx, 6);
            this.state = 76;
            this.match(LuaParser.T__4);
            break;

        case 7:
            localctx = new StatWhileContext(this, localctx);
            this.enterOuterAlt(localctx, 7);
            this.state = 77;
            this.match(LuaParser.T__5);
            this.state = 78;
            this.exp(0);
            this.state = 79;
            this.match(LuaParser.T__6);
            this.state = 80;
            this.block();
            this.state = 81;
            this.match(LuaParser.T__7);
            break;

        case 8:
            localctx = new StatIfContext(this, localctx);
            this.enterOuterAlt(localctx, 8);
            this.state = 83;
            this.match(LuaParser.T__8);
            this.state = 84;
            this.exp(0);
            this.state = 85;
            this.match(LuaParser.T__9);
            this.state = 86;
            this.block();
            this.state = 94;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===LuaParser.T__10) {
                this.state = 87;
                this.match(LuaParser.T__10);
                this.state = 88;
                this.exp(0);
                this.state = 89;
                this.match(LuaParser.T__9);
                this.state = 90;
                this.block();
                this.state = 96;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 99;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===LuaParser.T__11) {
                this.state = 97;
                this.match(LuaParser.T__11);
                this.state = 98;
                this.block();
            }

            this.state = 101;
            this.match(LuaParser.T__7);
            break;

        case 9:
            localctx = new StatForContext(this, localctx);
            this.enterOuterAlt(localctx, 9);
            this.state = 103;
            this.match(LuaParser.T__12);
            this.state = 104;
            this.match(LuaParser.NAME);
            this.state = 105;
            this.match(LuaParser.T__2);
            this.state = 106;
            this.exp(0);
            this.state = 107;
            this.match(LuaParser.T__13);
            this.state = 108;
            this.exp(0);
            this.state = 111;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===LuaParser.T__13) {
                this.state = 109;
                this.match(LuaParser.T__13);
                this.state = 110;
                this.exp(0);
            }

            this.state = 113;
            this.match(LuaParser.T__6);
            this.state = 114;
            this.block();
            this.state = 115;
            this.match(LuaParser.T__7);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function RetstatContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LuaParser.RULE_retstat;
    return this;
}

RetstatContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RetstatContext.prototype.constructor = RetstatContext;

RetstatContext.prototype.exp = function() {
    return this.getTypedRuleContext(ExpContext,0);
};

RetstatContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitRetstat(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LuaParser.RetstatContext = RetstatContext;

LuaParser.prototype.retstat = function() {

    var localctx = new RetstatContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, LuaParser.RULE_retstat);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 119;
        this.match(LuaParser.T__14);
        this.state = 121;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(((((_la - 16)) & ~0x1f) == 0 && ((1 << (_la - 16)) & ((1 << (LuaParser.T__15 - 16)) | (1 << (LuaParser.T__16 - 16)) | (1 << (LuaParser.T__17 - 16)) | (1 << (LuaParser.T__18 - 16)) | (1 << (LuaParser.T__30 - 16)) | (1 << (LuaParser.T__34 - 16)) | (1 << (LuaParser.T__35 - 16)) | (1 << (LuaParser.NAME - 16)) | (1 << (LuaParser.NORMALSTRING - 16)) | (1 << (LuaParser.FLOAT - 16)))) !== 0)) {
            this.state = 120;
            this.exp(0);
        }

        this.state = 124;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===LuaParser.T__0) {
            this.state = 123;
            this.match(LuaParser.T__0);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FuncnameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LuaParser.RULE_funcname;
    return this;
}

FuncnameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FuncnameContext.prototype.constructor = FuncnameContext;

FuncnameContext.prototype.NAME = function() {
    return this.getToken(LuaParser.NAME, 0);
};

FuncnameContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitFuncname(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LuaParser.FuncnameContext = FuncnameContext;

LuaParser.prototype.funcname = function() {

    var localctx = new FuncnameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, LuaParser.RULE_funcname);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 126;
        this.match(LuaParser.NAME);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function NamelistContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LuaParser.RULE_namelist;
    return this;
}

NamelistContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NamelistContext.prototype.constructor = NamelistContext;

NamelistContext.prototype.NAME = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(LuaParser.NAME);
    } else {
        return this.getToken(LuaParser.NAME, i);
    }
};


NamelistContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitNamelist(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LuaParser.NamelistContext = NamelistContext;

LuaParser.prototype.namelist = function() {

    var localctx = new NamelistContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, LuaParser.RULE_namelist);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 128;
        this.match(LuaParser.NAME);
        this.state = 133;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===LuaParser.T__13) {
            this.state = 129;
            this.match(LuaParser.T__13);
            this.state = 130;
            this.match(LuaParser.NAME);
            this.state = 135;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExplistContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LuaParser.RULE_explist;
    return this;
}

ExplistContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExplistContext.prototype.constructor = ExplistContext;

ExplistContext.prototype.exp = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpContext);
    } else {
        return this.getTypedRuleContext(ExpContext,i);
    }
};

ExplistContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitExplist(this);
    } else {
        return visitor.visitChildren(this);
    }
};




LuaParser.ExplistContext = ExplistContext;

LuaParser.prototype.explist = function() {

    var localctx = new ExplistContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, LuaParser.RULE_explist);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 136;
        this.exp(0);
        this.state = 141;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===LuaParser.T__13) {
            this.state = 137;
            this.match(LuaParser.T__13);
            this.state = 138;
            this.exp(0);
            this.state = 143;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExpContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = LuaParser.RULE_exp;
    return this;
}

ExpContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpContext.prototype.constructor = ExpContext;


 
ExpContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function ExpVarexpContext(parser, ctx) {
	ExpContext.call(this, parser);
    ExpContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ExpVarexpContext.prototype = Object.create(ExpContext.prototype);
ExpVarexpContext.prototype.constructor = ExpVarexpContext;

LuaParser.ExpVarexpContext = ExpVarexpContext;

ExpVarexpContext.prototype.varexp = function() {
    return this.getTypedRuleContext(VarexpContext,0);
};
ExpVarexpContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitExpVarexp(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ExpNumberContext(parser, ctx) {
	ExpContext.call(this, parser);
    ExpContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ExpNumberContext.prototype = Object.create(ExpContext.prototype);
ExpNumberContext.prototype.constructor = ExpNumberContext;

LuaParser.ExpNumberContext = ExpNumberContext;

ExpNumberContext.prototype.number = function() {
    return this.getTypedRuleContext(NumberContext,0);
};
ExpNumberContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitExpNumber(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ExpStrcatContext(parser, ctx) {
	ExpContext.call(this, parser);
    ExpContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ExpStrcatContext.prototype = Object.create(ExpContext.prototype);
ExpStrcatContext.prototype.constructor = ExpStrcatContext;

LuaParser.ExpStrcatContext = ExpStrcatContext;

ExpStrcatContext.prototype.exp = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpContext);
    } else {
        return this.getTypedRuleContext(ExpContext,i);
    }
};

ExpStrcatContext.prototype.operatorStrcat = function() {
    return this.getTypedRuleContext(OperatorStrcatContext,0);
};
ExpStrcatContext.prototype.accept = function(visitor) {
    if ( visitor instanceof LuaVisitor ) {
        return visitor.visitExpStrcat(this);
    } else {
        return visitor.visitChildren(this);
    }
};

